# wiggle-display

./: pyproject.toml  requirements.txt
src/wiggle_display/: display.py  main.py
