[project]
name = "wiggle_display"
version = "0.0.1"
authors = [
  { name="Vincent Kranendonk" },
]
description = "WiggleDisplay - Display for monitoring the WiggleBin"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
wiggle-display = "wiggle_display.main:main"

[project.urls]
"Homepage" = "https://github.com/wiggle-bin/wiggle-display.git"